invoice route and swagger updated
